--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main class="container">
         <!-- Processor Pipeline -->
-        <section class="main-box pipeline-display">
+        <div class="main-box pipeline-display">
             <h3>Processor Pipeline</h3>
             <div class="processor-info">
                 <div class="pipeline-img" id="pipeline-graph"></div>
@@ -59,7 +59,7 @@
                     <span>Saturated</span>
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- Main Content Row -->
         <div class="main-content-row">
