--- a/index.html
+++ b/index.html
@@ -1,159 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="">
+  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RVCAT Web</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-    <header>
-        <div>
-            <h1>RVCAT</h1>
-            <h2>Web edition</h2>
-        </div>
-
-        <nav class="menu">
-            <ul>
-                <li><a href="index.html">Simulator</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="blur-overlay" id="blur-overlay-item"></div>
-    <div class="overlay" id="loading-overlay">
-        <div class="spinner"></div>
-        <p id="loading-overlay-message">Initializing</p>
-        <p>Please wait, this process can take several seconds</p>
-    </div>
-
-    <main class="container">
-        <!-- Processor Pipeline -->
-        <div class="main-box pipeline-display">
-            <h3>Processor Pipeline</h3>
-            <div class="processor-info">
-                <div class="pipeline-img" id="pipeline-graph"></div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Port Number</th>
-                            <th>Supported Instructions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="processor-info-table-body">
-                    </tbody>
-                </table>
-            </div>
-            <div class="scale-container">
-                <!-- Color scale bar -->
-                <div class="color-scale">
-                    <!-- Example pointer (optional) -->
-                    <!-- <div class="pointer"></div> -->
-                </div>
-
-                <!-- Optional scale labels -->
-                <div class="scale-labels">
-                    <span>Underutilized</span>
-                    <span></span>
-                    <span>Saturated</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Main Content Row -->
-        <div class="main-content-row">
-            <!-- Simulation Settings -->
-            <section class="main-box input-section">
-                <h3>Simulation</h3>
-                <form id="simulator-form">
-                    <label for="programs-list">Program:</label>
-                    <select id="programs-list" name="assembly-code" onchange="reloadRvcat();">
-                        <!-- <option value="loop1">Loop 1</option> -->
-                    </select>
-
-                    <label for="processors-list">Processor:</label>
-                    <select id="processors-list" name="processor-name" onchange="reloadRvcat();">
-                        <!-- <option value="model1">Model 1</option> -->
-                    </select>
-
-                    <label for="iterations">Number of Iterations:</label>
-                    <input type="number" id="num-iters" name="iterations" min="1" max="3000" value="200" >
-
-                    <label for="rob-size">ROB Size:</label>
-                    <input type="number" id="rob-size" name="rob-size" min="1" max="1000" value="100" >
-                    <div class="simulation-inline-output">
-                        <div class="simulation-inline-item">
-                            <label for="instructions">Instructions:</label>
-                            <span id="instructions-output">?</span>
-                        </div>
-                        <div class="simulation-inline-item">
-                            <label for="cycles">Cycles:</label>
-                            <span id="cycles-output">?</span>
-                        </div>
-                        <div class="simulation-inline-item">
-                            <label for="IPC">IPC:</label>
-                            <span id="IPC-output">?</span>
-                        </div>
-                        <div class="simulation-inline-item">
-                            <label for="cycles-per-iteration">Cycles per iteration:</label>
-                            <span id="cycles-per-iteration-output">?</span>
-                        </div>
-                    </div>
-                    <button id="run-simulation-button" type="button" onclick="getSchedulerAnalysis();">
-                        <div id="run-simulation-spinner" class="spinner-small" style="display: none;"></div>
-                        <div id="run-simulation-text">Run simulation</div></button>
-                </form>
-            </section>
-
-            <!-- Assembly Code -->
-            <section class="main-box code-block">
-                <h3>Program and performance annotations</h3>
-                <pre>
-<code id="rvcat-asm-code">LOADING</code>
-                </pre>
-            </section>
-        </div>
-    </main>
-
-    <!-- Output Section -->
-    <section class="output-section">
-        <h3>Simulation Results</h3>
-        <div class="tabs">
-            <button class="tab-button" id="dependencies-output" onclick="showDependenciesGraph();">Dependencies</button>
-            <button class="tab-button" id="critical-paths-output" onclick="showCriticalPathsGraph();">Recurrent paths</button>
-            <button class="tab-button" id="timeline-output" onclick="getTimeline();">Timeline</button>
-        </div>
-
-        <div class="output-block-wrapper" id="simulation-output-container">
-            <section class="simulation-results-controls" id="dependencies-controls">
-                <div class="simulation-results-controls-item">
-                    <label for="dependencies-num-iters" style="margin-right: 10px;">Iterations:</label>
-                    <input class="input-simulation-result" type="number" id="dependencies-num-iters" name="dependencies-num-iters" min="1" max="50" value="1" onchange="lastExecutedCommand();" >
-                </div>
-                <div>
-                </div>
-            </section>
-            <div class="output-block" id="simulation-output">
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>The RVCAT developers © 2024</p>
-    </footer>
-
+    <title>Vite App</title>
     <!-- <script src="https://unpkg.com/svg-pan-zoom@3.6.1/dist/svg-pan-zoom.min.js"></script> -->
-    <script src="js/rvcat_code.js"></script>
-    <script src="js/rvcat.js"></script>
-    <script src="js/processor.js"></script>
-    <script>
-        openLoadingOverlay();
-    </script>
+    <script src="src/js/rvcat_code.js"></script>
+    <script src="src/js/rvcat.js"></script>
+    <script src="src/js/processor.js"></script>
+    <!--<script src="src/js/worker.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
-    <script>
-        initPyodide();
-    </script>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
+  
 </html>
