--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="/rvcat.js"></script>
     <script src="/processor.js"></script>
     <!--<script src="src/js/worker.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>-->
+    <script src="https://unpkg.com/@viz-js/viz@latest/standalone.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
-  
 </html>
