--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="/rvcat_code.js"></script>
     <script src="/rvcat.js"></script>
     <script src="/processor.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>-->
     <!--<script src="https://cdn.jsdelivr.net/npm/viz.js@2.1.2/viz.js"></script>-->
     <!--<script src="https://cdn.jsdelivr.net/npm/viz.js@2.1.2/full.render.js"></script>-->
   </head>
