--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RVCAT-WEB</title>
+    <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/wasm@2.12.0/dist/graphviz.umd.js"></script>
     <script src="/rvcat_code.js"></script>
     <script src="/rvcat.js"></script>
     <script src="/processor.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/wasm@2.12.0/dist/graphviz.umd.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
   </head>
   <body>
     <div id="app"></div>
